--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,3 +19,18 @@ h1, h2, h3, h4, h5, h6 {
     width: 1000px;
     margin-top: 30px;
 }
+
+.catForm {
+    display: flex;
+    justify-content: center;
+    margin: 1.5rem 0;
+}
+.inputColorBlock {
+    display: flex;
+    justify-content: center;
+}
+.inputColorSize {
+    width: 48px;
+    height: 38px;
+    padding: 0.3rem 0.45rem;
+}
