Настроен вывод цвета категории с помощью заливки ячейки

--- a/src/components/Lists/Categories/categoryStyle.css
+++ b/src/components/Lists/Categories/categoryStyle.css
@@ -16,3 +16,10 @@
     display: flex;
     justify-content: space-between;
 }
+
+.colorCat {
+    display: block;
+    border-radius: 0.375rem;
+    width: 48px;
+    height: 38px;
+}
